@@ -1,7 +1,7 @@
-import mutex
-
 import unittest
 import test.test_support
+
+mutex = test.test_support.import_module("mutex", deprecated=True)
 
 class MutexTest(unittest.TestCase):
 
